20091220 mnemogogo-0.9.10
* Warnings to Mnemosyne log.txt (not to stderr)
* Fix a bug in start_date handling that caused shifted statistics at
  each import after changing timezone.
  (IMPORTANT: export format changes require Mnemojojo 0.9.6 or above)

20091113 mnemogogo-0.9.9
* Add keyboard shortcut to start Mnemogogo (suggested by Bernhard Blum).
* Try to fix QString + str error on invalid plugin under Windows
  (reported by Bernhard Blum).

20091101 mnemogogo-0.9.8
* Do not convert xml entities to unicode during export.

20091031 mnemogogo-0.9.7
* Change names to `Mnemogogo' and `Mnemojojo' throughout.
* Fix some problems with PIL under Windows (thanks to Bernhard Blum).
* Replace magic number `43' with `jojo_title_height_pixels'
* Remove the plain text exporter.
* Convert html entities to unicode during export
  (problem identified by Bernhard Blum).
* Remove unneeded dependency on deprecated sets module.

20091020 mnemogogo-0.9.6
* Fix some problems with images under Windows
  (thanks to Bernhard Blum)

20091014 mnemogogo-0.9.5
* MAJOR CHANGE: new export/import format
* Handle a missing Python Image Library more gracefully
* Tidy up image handling functions.
* Fix a timezone bug in the calculation of days left.
* Fix a bug in resizing images below a maximum size.
* Lazier loading of card text.
* Switch to license to GPL2.

20090905 mnemogogo-0.9.4
* Randomize the choice of new cards.
* No longer crashes when a file cannot be removed.
* Open files with US-ASCII instead of ASCII

20090604 mnemogogo-0.9.3
* Fix an export problem on Windows that caused a
  java.lang.NumberFormatException in Mnemogogo
* Fix an export problem on Windows that put backslashes
  rather than slashes in html img paths.
(Thanks to Johannes Charman for reporting and testing these bugs on Windows)

20090526 mnemogogo-0.9.2
* Fix a bug in the transition from scheduled cards to new/forgotten cards.
* Use the types module in locking_enabling.py instead of the deprecated